--- a/lotto6from49App/src/app/app.component.html
+++ b/lotto6from49App/src/app/app.component.html
@@ -1,8 +1,10 @@
+<div class="container-fluid text-center bg-danger bg-opacity-80">
+  <p class=" fs-1 fw-bolder text-white" >LOTTO 6/49</p>
+</div>
+<app-de-joaca></app-de-joaca>
 
-<app-tralalal></app-tralalal>
+<!--
 <app-extracted-numbers></app-extracted-numbers>
-
 <router-outlet></router-outlet>
-
-<p>apphtml</p>
+-->
 
