--- a/lotto6from49App/src/app/extracted-numbers/extracted-numbers.component.html
+++ b/lotto6from49App/src/app/extracted-numbers/extracted-numbers.component.html
@@ -2,9 +2,14 @@
 <h1>Extracted Numbers</h1>
 
 
+<div>
+  <table>
+    <thead>
 
+    </thead>
+  </table>
 <p *ngFor="let tempNumber of extractedNumbersArray">
   {{ tempNumber.extractedNumbers}} : {{ tempNumber.extractionDate }}
 </p>
+</div>
 
-<p>nbgfdews</p>
