--- a/lotto6from49App/src/app/de-joaca/de-joaca.component.html
+++ b/lotto6from49App/src/app/de-joaca/de-joaca.component.html
@@ -6,12 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+<p>de joaca</p>
 <div class="m-4">
 
   <ul class="nav nav-tabs mt-5">
     <li class="nav-item">
       <a href="https://www.loto.ro/" class="nav-link active">Home</a>
+    </li>
+    <li class="nav-item dropdown">
+      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Home</a>
+      <div class="dropdown-menu">
+        <a href="#" class="dropdown-item">Inbox</a>
+        <a href="#" class="dropdown-item">Drafts</a>
+        <a href="#" class="dropdown-item">Sent Items</a>
+        <div class="dropdown-divider"></div>
+        <a href="#" class="dropdown-item">Trash</a>
+      </div>
     </li>
     <li class="nav-item">
       <a href="#" class="nav-link">Profile</a>
