--- a/lotto6from49App/src/app/app.component.html
+++ b/lotto6from49App/src/app/app.component.html
@@ -10,10 +10,10 @@
 <body>
 
 <div class="container-fluid text-start bg-danger bg-opacity-80">
-  <a href="http://localhost:4200/home"><img style="margin-left: 40px"src="./assets/pictures/logo.jpg" alt=""></a>
+  <a href="http://localhost:4200/home"><img style="margin-left: 40px" src="./assets/pictures/logo.jpg" alt=""></a>
   <span class="fw-bolder  text-white display-1 " style="margin-left: 40px" >LOTTO 6/49</span>
 
-  <img style="margin-left:400px"src="./assets/pictures/bile lotto.jpg" alt="">
+  <img style="margin-left:400px" src="./assets/pictures/bile lotto.jpg" alt="">
 </div>
 
 
@@ -25,7 +25,7 @@
       <a href="http://localhost:4200/home" class="nav-link ">Home</a>
     </li>
     <li class="nav-item">
-      <a href="http://localhost:4200/home" class="nav-link ">Play now</a>
+      <a href="http://localhost:4200/app-play-now" class="nav-link ">Play now</a>
     </li>
     <li class="nav-item">
       <a href="http://localhost:4200/extracted-numbers" class="nav-link ">Extractions</a>
@@ -62,7 +62,7 @@
     <li class="nav-item dropdown ms-auto">
       <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Admin</a>
       <div class="dropdown-menu dropdown-menu-end">
-        <a href="#" class="dropdown-item">Reports</a>
+        <a href="http://localhost:4200/app-users-list" class="dropdown-item">Users list</a>
         <a href="#" class="dropdown-item">Settings</a>
         <div class="dropdown-divider"></div>
         <a href="#" class="dropdown-item">Logout</a>
@@ -71,15 +71,15 @@
   </ul>
 </div>
 <router-outlet></router-outlet>
-<!--
-<footer>
-  <div class=" container-fluid  align-bottom text-center w-100 p-3 border-3 " style="background-color: burlywood;">
+
+<footer style=" padding-top: 20px">
+  <div class=" container-fluid  align-bottom text-center w-100 p-3 border-3 " style="background-color: burlywood; ">
     <ul>
       <p>Site design / logo © 2022 Marcel Pana; user licensed contributions </p>
     </ul>
   </div>
 </footer>
--->
+
 </body>
 </html>
 
