--- a/lotto6from49App/src/app/components/home/home.component.html
+++ b/lotto6from49App/src/app/components/home/home.component.html
@@ -11,9 +11,9 @@
     <h2 class="text-center co">Welcome to our homepage</h2>
     <!-- Slide Show -->
     <section>
-      <img class="mySlides" src="./assets/pictures/bilet1.jpg"  alt="dsfghj"   style="width:20%"   >
-      <img class="mySlides" src="./assets/pictures/Loto-6-din-49-tragerea-de-duminica.webp" style="width:20%">
-      <img class="mySlides" src="./assets/pictures/Rezultate-LOTO-6-din-49-Joker-si-Noroc.jpg" style="width:20%">
+      <img class="mySlides" src="../../../assets/pictures/bilet1.jpg" alt="dsfghj" style="width:20%"   >
+      <img class="mySlides" src="../../../assets/pictures/Loto-6-din-49-tragerea-de-duminica.webp" style="width:20%">
+      <img class="mySlides" src="../../../assets/pictures/Rezultate-LOTO-6-din-49-Joker-si-Noroc.jpg" style="width:20%">
     </section>
 
 <script>
